--- a/styling.css
+++ b/styling.css
@@ -1,5 +1,5 @@
 body {
-   background-image: url(/drk.jpg);
+   background-image: url(https://github.com/Ismaelx1/Snakey-Snake/blob/main/drk.jpg?raw=true);
    background-size: cover;
     display: flex;
     justify-content: center;
