--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,6 @@
 body {
-   background-image: url(https://github.com/Ismaelx1/Snakey-Snake/blob/main/drk.jpg?raw=true);
-   background-size: cover;
+   
+   background-color: black;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -37,7 +37,7 @@ body {
 
 h1 {
    
-    color: blueviolet;
+    color: #ccc;
     font-size: 50px;
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
